# ProjectSigmaTrading

./: .env  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  main.py  package.json  start.bat  start.sh  startMyPyCheck.bat  start_d.sh  start_dev.sh  stop.bat  stop.sh
.github/workflows/: deploy.yml  lint.yml
MLPipeline/: Dockerfile  Dockerfile.beat  Dockerfile.worker  pyproject.toml  requirements.beat.txt  requirements.txt  requirements.worker.txt
MLPipeline/app/: dataBaseModels.py  main.py  make_logger.py  pipeline.py  tasks.py
MLPipeline/src/: celery_app.py  celery_beat.py  celery_worker.py  convertorTF.py  custom_ta.py  dataBaseModels.py  dataFrameDownloader.py  downloadHistory.py  filters.py  imitation_connector.py  logger_setup.py  makeStats.py  pipeline.py  plClassification.py  plRegression.py  savePredictToDatabase.py  saveToDB.py  tasks.py  trading_simulator.py
app/: index.js  main.py  package.json  requirements.txt
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: data.py  main.py
backend/config/: config.go
backend/database/: models.go
backend/handlers/: admin.go  backtest.go
backend/middleware/: auth.go
backend_go/: go.mod  main.go
beat/: Dockerfile
frontend/: Dockerfile  nginx.conf  package.json
parser/: Cargo.toml  Dockerfile  requirements.txt
parser/src/: celery_app.py  celery_worker.py  downloadHistory.py  duckDB_setup.py  logger_setup.py  main.rs
parser_rust/: Cargo.toml
pipeline/: Dockerfile  requirements.txt
public/: index.html
src/: App.css  App.js  index.js
(+117 files in other folders)
