[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
rand = "0.8"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
ccxt-rust = { version = "0.1.5", features = ["full"] }
ccxt-exchanges = "0.1.5"
ccxt-core = "0.1.5"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
dotenv = "0.15"